<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/request_pickup"
        tools:ignore="MissingPrefix"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_gravity="bottom" android:elevation="10dp"
        android:background="?attr/rideos.primary_background_color"
        android:transitionName="detail_view">
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup_detail_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/dummy_view"
            android:layout_marginEnd="2dp" android:layout_marginTop="6dp" android:textSize="20sp"
            android:textColor="?attr/rideos.primary_text_color"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance_text"
            app:layout_constraintStart_toStartOf="@id/dummy_view" android:layout_marginStart="2dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/pickup_detail_text"
            android:textColor="?attr/rideos.secondary_text_color"/>
    <View
            android:id="@+id/dummy_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            style="@style/DefaultDetailTitleStyle"/>
    <ai.rideos.android.common.view.layout.LoadableDividerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/loadable_divider"
            app:layout_constraintTop_toBottomOf="@+id/pickup_detail_text" android:layout_marginTop="6dp"/>
    <TextView
            android:text="@string/pickup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/loadable_divider" android:layout_marginTop="24dp"/>
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pickup_address_text"
            android:textColor="?attr/rideos.primary_text_color"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@id/pickup_label"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"
            android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/drop_off_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drop_off_label" android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/pickup_label" android:layout_marginTop="17dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/drop_off_address_text"
            android:textColor="?attr/rideos.primary_text_color"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBaseline_toBaselineOf="@id/drop_off_label"
            android:layout_marginStart="96dp" app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
            android:textStyle="bold"/>
    <Button
            android:text="@string/request_ride_button_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/request_ride_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:background="@drawable/action_button_background_color"
            style="@style/DefaultActionButtonStyle"
            android:transitionName="action_button"
            android:enabled="false" android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
