<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardView"
            android:elevation="3dp"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="9dp"
            android:background="?attr/rideos.primary_background_color"
            android:transitionName="search_card">
        <EditText
                android:text=""
                android:hint="@string/location_search_hint_drop_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/edit_drop_off"
                app:layout_constraintTop_toTopOf="@+id/drop_off_icon"
                app:layout_constraintBottom_toBottomOf="@+id/drop_off_icon"
                app:layout_constraintStart_toStartOf="@+id/edit_pickup"
                app:layout_constraintEnd_toEndOf="@+id/edit_pickup" android:textSize="18sp"
                android:selectAllOnFocus="true"
                android:focusableInTouchMode="true"
                android:background="@null"
                android:inputType="textCapSentences"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_place_20dp"
                android:id="@+id/drop_off_icon" app:layout_constraintTop_toBottomOf="@+id/circle2"
                app:layout_constraintEnd_toEndOf="@+id/circle2"
                app:layout_constraintStart_toStartOf="@+id/circle2" android:layout_marginTop="11dp"
                android:tint="@color/no_interaction_icon_gray" android:contentDescription="@string/icon_description"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/circle_4dp" android:id="@+id/circle1"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@+id/pickup_icon"
                app:layout_constraintStart_toStartOf="@+id/pickup_icon"
                app:layout_constraintEnd_toEndOf="@+id/pickup_icon"
                android:tint="@color/background_icon_gray"
                android:contentDescription="@string/icon_description"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dip"
                android:background="?attr/rideos.divider_color"
                app:layout_constraintStart_toStartOf="@+id/edit_pickup"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/circle1"
                app:layout_constraintBottom_toTopOf="@+id/circle2"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/circle_4dp" android:id="@+id/circle2"
                app:layout_constraintStart_toStartOf="@+id/pickup_icon"
                app:layout_constraintEnd_toEndOf="@+id/pickup_icon" android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/circle1"
                android:tint="@color/background_icon_gray"
                android:contentDescription="@string/icon_description"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_radio_button_16dp"
                android:id="@+id/pickup_icon"
                app:layout_constraintTop_toBottomOf="@+id/up_icon" android:layout_marginTop="9dp"
                app:layout_constraintEnd_toEndOf="@+id/up_icon"
                app:layout_constraintStart_toStartOf="@+id/up_icon"
                android:tint="@color/no_interaction_icon_gray"
                android:contentDescription="@string/icon_description"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_arrow_back_28dp"
                android:id="@+id/up_icon" android:layout_marginTop="19dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="19dp"
                android:color="?attr/rideos.primary_text_color"
                android:contentDescription="@string/icon_description"/>
        <EditText
                android:text="@string/current_location_search_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/edit_pickup"
                app:layout_constraintBottom_toBottomOf="@+id/pickup_icon"
                app:layout_constraintTop_toTopOf="@+id/pickup_icon" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp" android:textSize="18sp"
                android:selectAllOnFocus="true"
                android:focusableInTouchMode="true"
                android:background="@null"
                android:inputType="textCapSentences"/>
        <Button
                android:text="@string/done_button_text"
                android:layout_width="45dp"
                android:layout_height="20dp"
                android:id="@+id/done_button"
                app:layout_constraintTop_toTopOf="@+id/up_icon" android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:textAllCaps="false"
                android:textColor="@drawable/text_button_color"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:textStyle="bold" app:layout_constraintBottom_toBottomOf="@+id/up_icon"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close_24dp"
                android:id="@+id/clear_pickup"
                app:layout_constraintTop_toTopOf="@+id/edit_pickup"
                app:layout_constraintBottom_toBottomOf="@+id/edit_pickup"
                app:layout_constraintEnd_toEndOf="@+id/edit_pickup" android:layout_marginEnd="8dp"
                android:tint="?attr/rideos.icon_color"
                android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close_24dp"
                android:id="@+id/clear_drop_off"
                app:layout_constraintTop_toTopOf="@+id/edit_drop_off"
                app:layout_constraintBottom_toBottomOf="@+id/edit_drop_off"
                app:layout_constraintEnd_toEndOf="@+id/edit_drop_off" android:layout_marginEnd="8dp"
                android:tint="?attr/rideos.icon_color"
                android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:background="?attr/rideos.primary_background_color"
            android:transitionName="search_recycler"/>
</androidx.constraintlayout.widget.ConstraintLayout>
